// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > matches snapshot for color variants 1`] = `
<div
  aria-label="80%"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="80"
  class="flex w-full items-center gap-2"
  role="progressbar"
>
  <div
    class="relative flex h-2 w-full items-center overflow-hidden rounded-full bg-muted"
  >
    <div
      class="h-full rounded-full bg-destructive"
      style="width: 80%;"
    />
  </div>
  <span
    class="shrink-0 truncate text-right text-sm text-muted-foreground"
  >
    80%
  </span>
</div>
`;

exports[`ProgressBar > matches snapshot for default state 1`] = `
<div
  aria-label="65%"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="65"
  class="flex w-full items-center gap-2"
  role="progressbar"
>
  <div
    class="relative flex h-2 w-full items-center overflow-hidden rounded-full bg-muted"
  >
    <div
      class="h-full rounded-full bg-primary"
      style="width: 65%;"
    />
  </div>
  <span
    class="shrink-0 truncate text-right text-sm text-muted-foreground"
  >
    65%
  </span>
</div>
`;
